# gb-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.md.old  conanfile.txt  gb-emulator.kdev4  main.cpp  opcode-cpp.py  opcodes.h  opcodes.xml
.kdev4/: gb-emulator.kdev4
include/: bit_utils.h  fele_utils.h  gbcpu.h  gbmemory.h  gplogger.h  instruction_trait.h  opcodes-autogen.h  opcodes.h  opcodes.h.jinja  registers.h
opcode-template/: create-shit.jinja  enum.h  kinds.py  opcode-cpp.py  opcodes.h.jinja  opcodes.xml  shit.txt  switch.cpp  xml-pretty-print.xml
src/: .gbcpu.cpp.kate-swp  bit_utils.cpp  call_switch-autogen.cpp  call_switch.cpp.jinja  gbcpu.cpp  gbmemory.cpp  instruction_trait.cpp  main.cpp  opcode.cpp  opcodes.cpp  opcodes_main.cpp  registers.cpp
tests/: copy-string.asm  first-test.asm  first-test.gb  string-copy.asm  string-copy.gb  string-len.asm  string-len.gb  test.cpp
